versioned_docs/version-0.29.0/api/server/index.md
# @fishjam-cloud/js-server-sdk

Server-side Node.js SDK for creating and managing Fishjam rooms, peers, agents, and receiving real-time server notifications.

## Client

- [FishjamClient](classes/FishjamClient.md)
- [FishjamWSNotifier](classes/FishjamWSNotifier.md)

## Notifications

- [decodeServerNotifications](functions/decodeServerNotifications.md)
- [verifyWebhookSignature](functions/verifyWebhookSignature.md)

## Other

- [BadRequestException](classes/BadRequestException.md)
- [FishjamAgent](classes/FishjamAgent.md)
- [FishjamBaseException](classes/FishjamBaseException.md)
- [FishjamNotFoundException](classes/FishjamNotFoundException.md)
- [ForbiddenException](classes/ForbiddenException.md)
- [InvalidFishjamCredentialsException](classes/InvalidFishjamCredentialsException.md)
- [MissingFishjamIdException](classes/MissingFishjamIdException.md)
- [PeerNotFoundException](classes/PeerNotFoundException.md)
- [QuotaExceededException](classes/QuotaExceededException.md)
- [RoomNotFoundException](classes/RoomNotFoundException.md)
- [ServiceUnavailableException](classes/ServiceUnavailableException.md)
- [UnauthorizedException](classes/UnauthorizedException.md)
- [UnknownException](classes/UnknownException.md)
- [FishjamExceptionInfo](interfaces/FishjamExceptionInfo.md)
- [MoqAccess](interfaces/MoqAccess.md)
- [MoqAccessConfig](interfaces/MoqAccessConfig.md)
- [PeerOptionsAgent](interfaces/PeerOptionsAgent.md)
- [PeerOptionsVapi](interfaces/PeerOptionsVapi.md)
- [PeerOptionsWebRTC](interfaces/PeerOptionsWebRTC.md)
- [RoomConfig](interfaces/RoomConfig.md)
- [ServerMessage](interfaces/ServerMessage.md)
- [StreamerToken](interfaces/StreamerToken.md)
- [ViewerToken](interfaces/ViewerToken.md)
- [AgentCallbacks](type-aliases/AgentCallbacks.md)
- [AgentEvents](type-aliases/AgentEvents.md)
- [AgentTrack](type-aliases/AgentTrack.md)
- [AudioCodecParameters](type-aliases/AudioCodecParameters.md)
- [Brand](type-aliases/Brand.md)
- [ChannelAdded](type-aliases/ChannelAdded.md)
- [ChannelRemoved](type-aliases/ChannelRemoved.md)
- [CloseEventHandler](type-aliases/CloseEventHandler.md)
- [ErrorEventHandler](type-aliases/ErrorEventHandler.md)
- [ExpectedAgentEvents](type-aliases/ExpectedAgentEvents.md)
- [ExpectedEvents](type-aliases/ExpectedEvents.md)
- [FishjamConfig](type-aliases/FishjamConfig.md)
- [IgnoredEvents](type-aliases/IgnoredEvents.md)
- [IncomingTrackData](type-aliases/IncomingTrackData.md)
- [IncomingTrackImage](type-aliases/IncomingTrackImage.md)
- [NotificationEvents](type-aliases/NotificationEvents.md)
- [OutgoingTrackData](type-aliases/OutgoingTrackData.md)
- [Override](type-aliases/Override.md)
- [Peer](type-aliases/Peer.md)
- [PeerAdded](type-aliases/PeerAdded.md)
- [PeerConnected](type-aliases/PeerConnected.md)
- [PeerCrashed](type-aliases/PeerCrashed.md)
- [PeerDeleted](type-aliases/PeerDeleted.md)
- [PeerDisconnected](type-aliases/PeerDisconnected.md)
- [PeerId](type-aliases/PeerId.md)
- [PeerMetadataUpdated](type-aliases/PeerMetadataUpdated.md)
- [PeerOptions](type-aliases/PeerOptions.md)
- [PeerStatus](type-aliases/PeerStatus.md)
- [PeerType](type-aliases/PeerType.md)
- [Room](type-aliases/Room.md)
- [RoomCrashed](type-aliases/RoomCrashed.md)
- [RoomCreated](type-aliases/RoomCreated.md)
- [RoomDeleted](type-aliases/RoomDeleted.md)
- [RoomId](type-aliases/RoomId.md)
- [RoomType](type-aliases/RoomType.md)
- [ServerNotification](type-aliases/ServerNotification.md)
- [StreamerConnected](type-aliases/StreamerConnected.md)
- [StreamerDisconnected](type-aliases/StreamerDisconnected.md)
- [Track](type-aliases/Track.md)
- [TrackAdded](type-aliases/TrackAdded.md)
- [TrackForwarding](type-aliases/TrackForwarding.md)
- [TrackForwardingRemoved](type-aliases/TrackForwardingRemoved.md)
- [TrackId](type-aliases/TrackId.md)
- [TrackMetadataUpdated](type-aliases/TrackMetadataUpdated.md)
- [TrackRemoved](type-aliases/TrackRemoved.md)
- [TrackType](type-aliases/TrackType.md)
- [VadNotification](type-aliases/VadNotification.md)
- [VadStatus](type-aliases/VadStatus.md)
- [VideoCodec](type-aliases/VideoCodec.md)
- [ViewerConnected](type-aliases/ViewerConnected.md)
- [ViewerDisconnected](type-aliases/ViewerDisconnected.md)
- [PeerStatus](variables/PeerStatus.md)
- [RoomType](variables/RoomType.md)
- [ServerMessage](variables/ServerMessage.md)
- [VideoCodec](variables/VideoCodec.md)
